--- a/2019.10.11/笔记.md
+++ b/2019.10.11/笔记.md
@@ -1,4 +1,4 @@
-### this （小难点）
+### this 
 
 - 掌握this到底是谁
     - 在事件函数中，事件触发是谁，this就是谁
@@ -42,9 +42,9 @@
     ```
         由多个简单类型或者引用类型组合在一起的事务
         let obj = {
-            name:'董尚',
+            name:'Nick',
             age:12,
-            sex:'男',
+            sex:'man',
             shuai:true
         }
 
@@ -62,10 +62,10 @@
             }
 
             let obj = {
-                name:'董尚',
+                name:'Nick',
                 age:12,
-                sex:'男',
-                shuai:true,
+                sex:'man',
+                handsome:true,
                 hehe:hehe
             }
             return obj;
@@ -93,8 +93,8 @@
         }
 
         //obj和obj2就叫实例
-        let obj = person('赵炎',15,'前端开发工程师','?'); //批量生产
-        let obj2 = person('你真胖',15,'前端开发工程师','?');
+        let obj = person('Jack',19,'doctor','man'); //批量生产
+        let obj2 = person('Bob',20,'police','man');
     ```    
 ### 面向对象
     - new
@@ -103,14 +103,3 @@
         1.构造函数中的this就是这个构造函数的*实例化对象*，默认的this也是*实例化对象*
         2.return返回值如果是简单类型，那么返回的结果为*实例化对象*，如果
         返回值为如果为引用类型，那么返回的结果就是这个*引用类型*
-
-
-    
-
-
-
-
-
-
-
-
